RESOLVED FIXED205246
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/break-spaces-009.html
https://bugs.webkit.org/show_bug.cgi?id=205246
Summary [LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/break...
alan
Reported 2019-12-14 21:48:28 PST
ssia
Attachments
Patch (2.09 KB, patch)
2019-12-14 21:53 PST, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-12-14 21:48:51 PST
alan
Comment 2 2019-12-14 21:53:29 PST
Antti Koivisto
Comment 3 2019-12-15 00:07:40 PST
Comment on attachment 385709 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=385709&action=review > Source/WebCore/layout/inlineformatting/InlineLineBreaker.cpp:286 > + // [ ][ ] : adjacent whitespace content has soft wrap opportunity. > + if (lastUncomittedContent->isText() && downcast<InlineTextItem>(*lastUncomittedContent).isWhitespace()) > + isAtSoftWrapOpportunityBeforeWhitespace = true; break-space might need a new strategy at some point. Creating InlineTextItems for each space is not very efficient at all.
alan
Comment 4 2019-12-15 06:09:46 PST
Note You need to log in before you can comment on or make changes to this bug.