[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/break-spaces-009.html https://bugs.webkit.org/show_bug.cgi?id=205246 <rdar://problem/57944015>

Reviewed by Antti Koivisto.

Fix the "soft wrap opportunity" case when both the incoming and the previous runs are whitespace.

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::LineBreaker::Content::isAtSoftWrapOpportunity):

Canonical link: https://commits.webkit.org/218451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253535 268f45cc-cd09-0410-ab3c-d52691b4dbfc